- syntax highlighting is minimally faster for long outputs
- graphics export plugin gains option for EPS compatibility
- fixed: inserting / removing rows in the data editor in the presence of invalid fields in later rows would lead to a crash
- fix some internal problems with enabledness/disabledness of plugin components
- some complex plotting plugins now start up noticeably faster
- fixed: sometimes detecting created X11() windows would fail, esp. under high load
- create the workspace browser only when it is first shown
- support for including files and snippets in xml files		TODO: use more
- all file selection line edits gain filename-completion
- add a basic file selector window				TODO: add window activation shortcut
- show the focus indication (thin red border) also for detached windows
- tool windows can be closed and detached in the same way as regular windows
- fix a crash with detached tool windows
- add command line option --disable-stack-check for systems where R C stack checking is buggy
- the modifier "not" for boolean properties returns a (negated) boolean sub-propery instead of just a string
- add possibility to blacklist packages from fetching structure information. Package GO is blacklisted by default.
- when fetching the structure of "promise" R objects, don't keep them in memory
- optimize the function to retrieve the structure of R object (for display in the object browser, and completion)
- Messages, warnings, and errors for plugin commands are shown in the output, instead of in a dialog

--- Version 0.4.7a - May-07-2007
- add sanity check for the detected stack limits
- fixed: one some systems rkward would crash or not compile due to missing fortran symbols
- fixed: starting the scatterplot plugin in wizard mode would crash rkward
- tab-completion in the console will do partial completion, if all potential completions have a common start
- fixed: file-name completion would always assume the home directory as the current directory